--- a/functions/zoho_analytics_datastore_sync_routes_handler/catalyst-config.json
+++ b/functions/zoho_analytics_datastore_sync_routes_handler/catalyst-config.json
@@ -4,11 +4,11 @@
 		"stack": "node16",
 		"type": "advancedio",
 		"env_variables": {
-			"CLIENT_ID": "1000.U90NQ01E859NQW9RL1GASAO7ZD7U4R",
-			"CLIENT_SECRET": "411ba4390261b22f41acad73b1c1a9fefe2381c359",
-			"REFRESH_TOKEN": "1000.6e2578f40c7a047b9850af44d82ba545.842e345a163459e7c6ea9125ac35f785",
+			"CLIENT_ID": "YOUR CLIENT_ID",
+			"CLIENT_SECRET": "YOUR CLIENT_SECRET",
+			"REFRESH_TOKEN": "YOUR REFRESH_TOKEN",
 			"AUTH_HOST" : "https://accounts.zoho.com/oauth/v2/token",
-			"CODELIB_SECRET_KEY" : "Analytics"
+			"CODELIB_SECRET_KEY" : "CODELIB_FAKE_KEY"
 		}
 	},
 	"execution": {
